/**
 * The interface Pagamento.
 */
public interface Pagamento {
    /**
     * Calcular pagamento double.
     *
     * @return the double
     */
    public double calcularPagamento();
}
